[project]
name = "Django-Project-Zero"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucas Stankevicius", email = "99023092+LSkevi@users.noreply.github.com"},
]
dependencies = ["django>=6.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
