[project]
name = "Django-Project-Zero"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucas Stankevicius", email = "99023092+LSkevi@users.noreply.github.com"},
]
dependencies = ["django>=6.0", "djangorestframework>=3.16.1", "django-cors-headers>=4.9.0", "djangorestframework-simplejwt>=5.5.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
